@@ -5,16 +5,18 @@ import java.util.List;
 import joshie.crafting.CraftingMod;
 import joshie.crafting.api.IReward;
 import joshie.crafting.api.ITrigger;
+import joshie.crafting.gui.SelectItemOverlay.Type;
 import joshie.crafting.gui.TextFieldHelper.IntegerFieldHelper;
 import joshie.crafting.helpers.ClientHelper;
 import joshie.crafting.helpers.ListHelper;
 import net.minecraft.client.gui.ScaledResolution;
+import net.minecraft.item.ItemStack;
 
 import org.lwjgl.opengl.GL11;
 
 import cpw.mods.fml.common.eventhandler.Event.Result;
 
-public class GuiCriteriaEditor extends GuiOffset {
+public class GuiCriteriaEditor extends GuiOffset implements IItemSelectable {
     public static final GuiCriteriaEditor INSTANCE = new GuiCriteriaEditor();
     private static final NameEdit nameEdit = new NameEdit();
     private static final RepeatEdit repeatEdit = new RepeatEdit();
@@ -28,7 +30,8 @@ public class GuiCriteriaEditor extends GuiOffset {
         ScaledResolution res = GuiCriteriaEditor.INSTANCE.res;
         int fullWidth = (res.getScaledWidth()) - offsetX + 5;
         //Title and Repeatability Box
-        drawText("Unique Name: " + nameEdit.getText(), 9 - offsetX, 9, 0xFFFFFFFF);
+        drawStack(selected.getIcon(), 1, 4, 1F);
+        drawText("Display Name: " + nameEdit.getText(), 21 - offsetX, 9, 0xFFFFFFFF);
         drawText("Repeatability: " + repeatEdit.getText() + "x", fullWidth - 130, 9, 0xFFFFFFFF);
         drawBox(-1, 210, fullWidth, 1, 0xFFFFFFFF, 0xFFFFFFFF);
         drawText("Use arrow keys to scroll sideways, or use the scroll wheel. (Down to go right)", 9 - offsetX, 215, 0xFFFFFFFF);
@@ -156,9 +159,14 @@ public class GuiCriteriaEditor extends GuiOffset {
         boolean hasClicked = false;
         //Name and repeat
         int fullWidth = (res.getScaledWidth()) - offsetX + 5;
-        if (ClientHelper.canEdit()) {
-            if (mouseY >= 6 && mouseY <= 19) {
-                if (mouseX >= 0 && mouseX <= 200) {
+        if (ClientHelper.canEdit()) {            
+            if (mouseY >= 4 && mouseY <= 19) {
+                if (mouseX <= 15) {
+                    SelectItemOverlay.INSTANCE.select(this, Type.REWARD);
+                    hasClicked = true;
+                }
+                
+                if (mouseX >= 16 && mouseX <= 200) {
                     nameEdit.select();
                     hasClicked = true;
                 }
@@ -252,5 +260,10 @@ public class GuiCriteriaEditor extends GuiOffset {
         public void setNumber(int amount) {
             INSTANCE.selected.setRepeatAmount(amount);
         }
+    }
+
+    @Override
+    public void setItemStack(ItemStack stack) {
+        selected.setIcon(stack);
     }
 }
